<resources>
    <string name="app_name">BaybayiNatin</string>
    <string name="pagkabigo">Mababa ang nakuha mong grado sa pagsusulit na ito. \n Maari kang magpatuloy o bumalik at kumuha ulit</string>
    <string name="pagsisimula_1">Ang Baybayin script ay ginamit ng malawakan sa Pilipinas bago pa man dumating ang mga Kastila noong ika-16 na siglo.</string>
    <string name="pagsisimula_2">Ito ay isang silabikong script na kumakatawan sa bawat syllable ng mga salita, hindi sa bawat tunog.</string>
    <string name="pagsisimula_3">Mayroon itong 17 na pangunahing karakter, 14 dito ay kumakatawan sa mga tunog na kombinasyon ng katinig at tatlo naman ay patinig.</string>
    <string name="pagsisimula_4">Ito ang sistema ng pagsulat na ginamit para sa Tagalog. Matapos ang pananakop ng mga Espanyol, nahuli ang paggamit ng Baybayin sa bansa dahil sa paggamit ng mga Espanyol na wika at Latin na sistema ng pagsulat.</string>
    <string name="kahalagahan_1">Alam mo ba na ang Baybayin ang sinaunang alpabeto ng mga Filipino bago pa dumating ang mga Espanol at maituro ang alpabetong Romano?</string>
    <string name="kahalagahan_2">Mula ito sa salitang \"baybay\" ng mga Tagalog na nangangahulungan ng lupaing nasa gilid ng dagat at ng \"pagbaybay\"na nangangahulugan ng ispeling.</string>
    <string name="kahalagahan_3">Ang aplikasyon na ito ay binuo upang makatulong na mapanatili ang local na wika at iskrip sa pamamagitan ng pag uugnay ng tradisyon at teknolohiya.</string>
    <string name="kahalagahan_4">Nakapaloob dito ang samu’t saring leksyon na makakatulong.</string>
    <string name="pagsusulit_1">Mula sa iyong binasa, magkakaroon ka ng maikling pagsusulit!</string>
    <string name="pagsusulit_2"> Maari kang maghanda para sa pagsusulit tungkol sa Baybayin matapos ang impormasyong nabasa.</string>
    <string name="question1">Ano ang Baybayin?</string>
    <string name="q1_choice1">Makabagong sistema nang pagsulat ng mga Filipino</string>
    <string name="q1_choice2">Sinaunang alpabeto ng mga Filipino bago pa dumating ang mga Kastila</string>
    <string name="q1_choice3">Sistema nang pagsulat ng mga Kastila</string>
    <string name="question2">Ano ang kahulugan ng salitang "pagbaybay"?</string>
    <string name="q2_choice1">ispeling</string>
    <string name="q2_choice2">Lumalangoy sa dagat</string>
    <string name="q2_choice3">Lumalakad sa dalampasigan</string>
    <string name="question3">Ano ang ibig sabihin ng "baybay" sa salitang "Baybayin"?</string>
    <string name="q3_choice1">Sistema nang pagsulat ng mga Kastila</string>
    <string name="q3_choice2">Lupaing nasa gilid ng dagat</string>
    <string name="q3_choice3">Magsulat</string>
    <string name="question4"> Ilan ang pangunahing karakter sa Baybayin script?</string>
    <string name="q4_choice1">10</string>
    <string name="q4_choice2">14</string>
    <string name="q4_choice3">17</string>
    <string name="question5"> Anong sistema ng pagsulat ang ginamit para sa Tagalog gamit ang Baybayin script?</string>
    <string name="q5_choice1">Alpabeto</string>
    <string name="q5_choice2">Silabiko</string>
    <string name="q5_choice3">Katinig</string>
    <string name="Yunit_2_intro_1">Ang \"patinig\" sa Baybayin ay mga simbolong ginagamit upang tukuyin ang tunog ng mga patinig o vowel sa mga salita.</string>
    <string name="Yunit_2_intro_2">Sa Baybayin, mayroong tatlong patinig: /a/, /i/, at /u/. Ang mga patinig na ito ay karaniwang nakasulat sa ibaba o sa itaas ng mga katinig, depende sa uri ng patinig na nais gamitin.</string>
    <string name="Yunit_2_intro_3">Ang bigkas ng /e/ at /i/ ay maaaring magkapalit ayon sa paggamit ng mga katutubo. Ganoon din sa pagggamit ng /o/ at /u/.</string>
    <string name="Yunit_2_patinig_1">Ang karakter na /a/ sa Baybayin ay may anyong titik \"u\" sa alpabetong Tagalog at may dalawang guhit sa kaliwang bahagi. Maaari rin namang isa ang guhit na makikita sa kaliwa.</string>
    <string name="Yunit_2_patinig_2">Ang /e/ o /i/ sa Baybayin ay bigkas-Tagalog gaya sa tunog ng madiin na \"i\" o malambot na \"e\" ng alpabetong Tagalog. Hindi ito bigkas-Ingles na \"ay\" gaya sa titik \"i\" sa alpabeto.</string>
    <string name="Yunit_2_patinig_3">Ang /o/ o /u/ sa Baybayin ay bigkas-Tagalog gaya sa tunog ng madiin na \"u\" o malambot na \"o\" ng alpabetong Tagalog. Hindi ito bigkas-Ingles na \"yu\" gaya sa titik \"u\" sa alpabeto, o kaya sa tunog \"oh\" ng titik \"o\" ng wikang Ingles. Ito ang pinakamadaling makilala na patinig.</string>
    <string name="yunit2_question1">Ano ang mga patinig sa Baybayin?</string>
    <string name="yunit2_q1_choice1">A, E, I</string>
    <string name="yunit2_q1_choice2">A, I, U</string>
    <string name="yunit2_q1_choice3">A, ba, ka</string>
    <string name="yunit2_question2">Ano ang pinakamadaling makilala na patinig sa Baybayin?</string>
    <string name="yunit2_q2_choice1">I</string>
    <string name="yunit2_q2_choice2">O</string>
    <string name="yunit2_q2_choice3">A</string>
    <string name="yunit2_question3">Alin sa mga ito ang may tunog na /e/ o /i/?</string>
    <string name="yunit2_q3_choice1">O</string>
    <string name="yunit2_q3_choice2">ay</string>
    <string name="yunit2_q3_choice3">I</string>
    <string name="yunit2_question4">Anong Baybayin na titik ang kumakatawan sa patinig /o/ o /u/?</string>
    <string name="yunit2_q4_choice1">Titik "o"</string>
    <string name="yunit2_q4_choice2">Titik "u"</string>
    <string name="yunit2_q4_choice3">Titik "e"</string>
    <string name="yunit2_question5">Paano itinuturing ang bigkas ng patinig /e/ o /i/ sa Baybayin?</string>
    <string name="yunit2_q5_choice1">Bigkas-Tagalog gaya ng "ay" sa Ingles</string>
    <string name="yunit2_q5_choice2">Bigkas-Tagalog gaya ng malambot na "e" sa Tagalog</string>
    <string name="yunit2_q5_choice3">Bigkas-Ingles gaya ng "i" sa alpabetong Tagalog</string>
    <string name="yunit3_intro_1">Ang katinig sa Baybayin ay mga simbolong ginagamit upang tukuyin ang tunog ng mga katinig o consonant sa mga salita.</string>
    <string name="yunit3_intro_2">Sa Baybayin, mayroon itong 14 na katinig: /ba/, /ka/, /da/ra/, /ga/, /ha/, /la/, /ma/, /na/, /nga/, /pa/, /sa/, /ta/, /wa/, at /ya/.</string>
    <string name="yunit3_intro_3">Ang mga katinig na ito ay karaniwang nakasulat na magkakasunod sa isang pantig upang makabuo ng mga salita.</string>
    <string name="yunit3_intro_4">Tandaan, ang 14 na katinig ay laging may kasamang patinig na "A" dahil ang Baybayin ay isang abugida. Iba ito sa alpabetong Filipino na isinusulat ang mga titik na B, K, D, G, H, L, M, N, NG, P, S, T, W, at Y.</string>
    <string name="yunit3_baka_1">Sa aralin na ito, matatalakay ang isa sa mga katinig sa Baybayin, ang /ba/ at /ka/.</string>
    <string name="yunit3_baka_2">Ang katinig na /ba/ sa Baybayin ay ang unang katinig sa abakadang Filipino. Ito ay katulad ng katinig na "B" sa Latinong abakada.</string>
    <string name="yunit3_baka_3">Narito ang isang halimbawa ng mga salitang naglalaman ng katinig na /ba/ sa Baybayin:</string>
    <string name="yunit3_baka_4">Kung ating babalikan ang nakaraang aralin na natalakay tungkol sa mga patinig, ano sa tingin mo ang huling titik?</string>
    <string name="yunit3_baka_5">Tama! Ito ay ang patinig na /i/ o /e/. Ang halimbawa na nasa itaas ay maaaring mabasa na "babai" o "babae" depende sa tawag ng bawat indibidwal sa patinig na /i/ o /e/.</string>
    <string name="yunit3_baka_6">Ang susunod na tatalakayin ay ang katinig na /ka/. Mangyaring pindutin ang button upang magpatuloy sa susunod na bahagi ng paksa.</string>
    <string name="yunit3_baka_7">Ang pangalawang parte ng paksang ito ay itatalakay ang katinig na /ka/.</string>
    <string name="yunit3_baka_8">Upang madali itong matandaan, maaari nating ihalintulad nito sa katinig na “K” sa Latinong abakada. Narito ang paraan kung paano natin ito maikukumpara sa titik na "K".</string>
    <string name="yunit3_baka_9">Narito ang isang halimbawa ng mga salitang naglalaman ng katinig na /ka/ sa Baybayin:</string>
    <string name="yunit3_baka_10">Ang halimbawa na nasa itaas ay mababasa na "baka”</string>
    <string name="yunit3_baka_11">Kasama sa araling ito ang pagtalakay sa mga kudlit.</string>
    <string name="yunit3_baka_12">Ang mga kudlit ay mga marka upang ipahayag ang iba’t ibang tunog ng mga titik. Mangyaring tignan ang mga kudlit na nasa ibaba.</string>
    <string name="yunit3_baka_13">Ang unang kudlit sa baybayin ay ang kudlit e/i. Sa katinig na /ba/, kapag may bilog sa itaas, ito ay mababago ang tunog sa /be/ o /bi/.</string>
    <string name="yunit3_baka_14">Kudlit na bilog sa ibaba ng katinig ay nagbibigay ng tunog na o/u. Halimbawa, /ba/ ay magiging /bo/ o /bu/ kapag ginamitan ng kudlit na o/u.</string>
    <string name="yunit3_baka_15">Ang pangatlong kudlit sa Baybayin, tinatawag na "pamudpod" o "pamudpod na pakpak," ay ginagamit upang alisin ang patinig sa katinig, tulad ng /ba/ na nagiging /b/ na lang.</string>
    <string name="yunit3_baka_16">Bilang iyong sariling pagsusulit, mangyaring subukang gamitin ang katinig na /ka/ na may mga kudlit.</string>
    <string name="yunit3_quiz1_question1">Pang ilan sa Baybayin ang katinig na Ba?</string>
    <string name="yunit3_quiz1_q1_choice1">pang-lima</string>
    <string name="yunit3_quiz1_q1_choice2">pang-una</string>
    <string name="yunit3_quiz1_q1_choice3">pang-apat</string>
    <string name="yunit3_quiz1_question2">Ano ang pagkakatulad ng katinig na Ba sa Latinong abakada?</string>
    <string name="yunit3_quiz1_q2_choice1">V</string>
    <string name="yunit3_quiz1_q2_choice2">B</string>
    <string name="yunit3_quiz1_q2_choice3">D</string>
    <string name="yunit3_quiz1_question3">Saan maaring ihalintulad ang katinig na /ka/ sa Latinong abakada?</string>
    <string name="yunit3_quiz1_q3_choice1">Ka</string>
    <string name="yunit3_quiz1_q3_choice2">Q</string>
    <string name="yunit3_quiz1_q3_choice3">K</string>
    <string name="yunit3_quiz1_question4">Kudlit na bilog sa ibaba ng katinig na /ba/ ay nagbibigay ng tunog na ___?</string>
    <string name="yunit3_quiz1_q4_choice1">e/i</string>
    <string name="yunit3_quiz1_q4_choice2">o/u</string>
    <string name="yunit3_quiz1_q4_choice3">b</string>
    <string name="yunit3_quiz1_question5">Ano ang tawag sa pamudpod na kudlit sa Baybayin?</string>
    <string name="yunit3_quiz1_q5_choice1">bo/bu</string>
    <string name="yunit3_quiz1_q5_choice2">b</string>
    <string name="yunit3_quiz1_q5_choice3">be/bi</string>
    <string name="yunit3_daga_1">Sa aralin na ito, matatalakay ang isa sa mga katinig sa Baybayin, ang /da/ at /ga/.</string>
    <string name="yunit3_daga_2">Ang katinig na /da/ ay isang titik na kumakatawan sa tunog ng /d/. Upang madaling matandaan ang paggamit ng katinig na ito, isipin pagkakahalintulad nito sa Latinong abakada sa pagsulat.</string>
    <string name="yunit3_daga_3">Isang halimbawa ng mga salitang naglalaman ng katinig na /da/ sa Baybayin ay:</string>
    <string name="yunit3_daga_4">Ano sa tingin mo ang salitang nasa itaas? Kung ang sagot mo ay "daga", ikaw ay tama!</string>
    <string name="yunit3_daga_5">Ang susunod na tatalakayin ay ang katinig na /ga/. Mangyaring pindutin ang button upang magpatuloy sa susunod na bahagi ng paksa.</string>
    <string name="yunit3_daga_6">Ang pangalawang parte ng paksang ito ay itatalakay ang katinig na /ga/.</string>
    <string name="yunit3_daga_7">Upang madali itong matandaan, maaari nating ihalintulad nito sa katinig na “G” sa Latinong abakada. Narito ang paraan kung paano natin ito maikukumpara sa titik na "G".</string>
    <string name="yunit3_daga_8">Narito ang isang halimbawa ng mga salitang naglalaman ng katinig na /ga/ sa Baybayin:</string>
    <string name="yunit3_daga_9">Sa iyong palagay, ano ang pagkakabasa mo sa salitang nasa itaas? Kung ang iyong sagot ay “gabi”, tama ka!</string>
</resources>