<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Lessons.Yunit3_Lesson_Ba_Ka">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/_10sdp"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@color/black200"
                android:cropToPadding="false"
                android:padding="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BaybayiNatin"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:fontFamily="@font/script_regular"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"/>

        </androidx.cardview.widget.CardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/CustomScrollBarTheme"
            android:layout_marginBottom="@dimen/_20sdp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Aralin"
                    android:layout_gravity="center"
                    android:textSize="25sp"
                    android:textColor="@color/black200"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginTop="@dimen/_20sdp"/>

                <ImageView
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:src="@drawable/yunit3_letter_ba"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="center_horizontal"
                    />
                <Button
                    android:id="@+id/baBtn"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_sound_mute"
                    android:layout_marginTop="@dimen/_5sdp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black200"
                    android:textSize="18sp"
                    android:text="@string/yunit3_baka_1"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/_20sdp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black200"
                    android:textSize="18sp"
                    android:text="@string/yunit3_baka_2"
                    android:textAlignment="center"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginTop="@dimen/_10sdp"/>
                <ImageView
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:src="@drawable/yunit3_letter_ba_explain"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black200"
                    android:textSize="18sp"
                    android:text="@string/yunit3_baka_3"
                    android:textAlignment="center"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginTop="@dimen/_10sdp"/>

                <ImageView
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:src="@drawable/yunit3_naglalaman_ng_letter_ba"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black200"
                    android:textSize="18sp"
                    android:text="@string/yunit3_baka_4"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/_10sdp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black200"
                    android:textSize="18sp"
                    android:text="@string/yunit3_baka_5"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/_10sdp"/>

                <ImageView
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:src="@drawable/yunit3_babai_babae"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black200"
                    android:textSize="18sp"
                    android:text="@string/yunit3_baka_6"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/_10sdp"/>
                <ImageView
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:src="@drawable/yunit3_letter_ka"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="center_horizontal"
                    />
                <Button
                    android:id="@+id/kaBtn"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_sound_mute"
                    android:layout_marginTop="@dimen/_5sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black200"
                    android:textSize="18sp"
                    android:text="@string/yunit3_baka_7"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/_10sdp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black200"
                    android:textSize="18sp"
                    android:text="@string/yunit3_baka_8"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/_10sdp"/>
                <ImageView
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:src="@drawable/yunit3_maikukumpara_letter_k"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black200"
                    android:textSize="18sp"
                    android:text="@string/yunit3_baka_9"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/_10sdp"/>
                <ImageView
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:src="@drawable/yunit3_naglalaman_ng_letter_ka"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black200"
                    android:textSize="18sp"
                    android:text="@string/yunit3_baka_10"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/_10sdp"/>
                <ImageView
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:src="@drawable/yunit3_kudlit"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black200"
                    android:textSize="18sp"
                    android:text="@string/yunit3_baka_11"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/_10sdp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black200"
                    android:textSize="18sp"
                    android:text="@string/yunit3_baka_12"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/_10sdp"/>
                <ImageView
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:src="@drawable/yunit3_kudlit_be_bi"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black200"
                    android:textSize="18sp"
                    android:text="@string/yunit3_baka_13"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/_10sdp"/>
                <ImageView
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:src="@drawable/yunit3_kudlit_bo_bu"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black200"
                    android:textSize="18sp"
                    android:text="@string/yunit3_baka_14"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/_10sdp"/>
                <ImageView
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:src="@drawable/yunit3_kudlit_b"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black200"
                    android:textSize="18sp"
                    android:text="@string/yunit3_baka_15"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/_10sdp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black200"
                    android:textSize="18sp"
                    android:text="@string/yunit3_baka_16"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/_10sdp"/>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/bumalik"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:background="@drawable/container_buttons_green"
                        android:text="Bumalik"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins_medium"
                        android:layout_marginBottom="@dimen/_20sdp"
                        />
                    <Button
                        android:id="@+id/susunod"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:background="@drawable/container_buttons_green"
                        android:text="Susunod"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins_medium"
                        android:layout_gravity="end"
                        android:layout_marginBottom="@dimen/_20sdp"
                        />
                </FrameLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>