<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Lessons.Yunit1_Lesson_Pagsisimula">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/_10sdp"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@color/black200"
                android:cropToPadding="false"
                android:padding="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BaybayiNatin"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:fontFamily="@font/script_regular"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"/>

        </androidx.cardview.widget.CardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/CustomScrollBarTheme"
            android:layout_marginBottom="@dimen/_20sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pagsisimula"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textColor="@color/black200"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginTop="@dimen/_20sdp"/>

            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_70sdp"
                android:src="@drawable/ic_logo_baybayin"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black200"
                android:textSize="16sp"
                android:text="@string/pagsisimula_1"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="@dimen/_20sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black200"
                android:textSize="16sp"
                android:text="@string/pagsisimula_2"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="@dimen/_10sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black200"
                android:textSize="16sp"
                android:text="@string/pagsisimula_3"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="@dimen/_10sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black200"
                android:textSize="16sp"
                android:text="@string/pagsisimula_4"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="@dimen/_10sdp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/bumalik"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/container_buttons_green"
                    android:text="Bumalik"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_marginBottom="@dimen/_20sdp"
                    />
                <Button
                    android:id="@+id/susunod"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/container_buttons_green"
                    android:text="Susunod"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_gravity="end"
                    android:layout_marginBottom="@dimen/_20sdp"
                    />
            </FrameLayout>
        </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>